--- a/amvera.yml
+++ b/amvera.yml
@@ -8,4 +8,6 @@ build:
   requirementsPath: requirements.txt
 
 run:
-  command: mkdir -p /app && cp quest_bot.py config.json /app/ && cd /app && python quest_bot.py
+  scriptName: quest_bot.py
+  persistenceMount: /tgbot/config.json
+  containerPort: 80
