--- a/amvera.yml
+++ b/amvera.yml
@@ -3,3 +3,10 @@ meta:
   toolchain:
     name: pip
     version: "3.12"
+
+build:
+  requirementsPath: requirements.txt
+run:
+  scriptName: quest_bot.py
+  command: ls -la && python quest_bot.py
+  containerPort: 80
