--- a/ngbot/app/amvera.yml
+++ b/ngbot/app/amvera.yml
@@ -4,7 +4,7 @@ meta:
     name: pip
     version: "3.12"
 build:
-  requirementsPath: ngbot/ngbot/requirements.txt
+  requirementsPath: ngbot/ngbot/app/requirements.txt
 run:
   containerPort: 80
-  scriptName: ngbot/ngbot/quest_bot.py
+  scriptName: ngbot/ngbot/app/quest_bot.py
