--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-python-telegram-bot==13.15
-python-telegram-bot[job-queue]==13.15
+python-telegram-bot==20.7
+python-telegram-bot[job-queue]==20.7
 pytz==2023.3
-urllib3==1.26.15
+urllib3==2.1.0
+six>=1.10.0
