--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
+six>=1.10.0
+urllib3>=2.0.0
+requests>=2.31.0
 python-telegram-bot==20.7
 python-telegram-bot[job-queue]==20.7
 pytz==2023.3
-urllib3==2.1.0
-six>=1.10.0
