--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
-six>=1.10.0
-urllib3>=2.0.0
-requests>=2.31.0
-python-telegram-bot==20.7
-python-telegram-bot[job-queue]==20.7
+python-telegram-bot==13.15
+APScheduler==3.6.3
+cachetools==4.2.2
+certifi>=2023.7.22
+tornado>=6.3.3
 pytz==2023.3
