--- a/amvera.yml
+++ b/amvera.yml
@@ -2,10 +2,15 @@ meta:
   environment: python
   toolchain:
     name: pip
-    version: "3.10"
+    version: "3.8"
 build:
   requirementsPath: requirements.txt
 run:
   persistenceMount: /data
   containerPort: "80"
   scriptName: tgbot/quest_bot.py
+  healthcheck:
+    path: /health
+    port: 80
+  preRunScript: |
+    pkill -f quest_bot.py || true
