--- a/amvera.yml
+++ b/amvera.yml
@@ -2,7 +2,7 @@ meta:
   environment: python
   toolchain:
     name: pip
-    version: "3.8"
+    version: "3.10"
 build:
   requirementsPath: requirements.txt
 run:
@@ -13,4 +13,5 @@ run:
     path: /health
     port: 80
   preRunScript: |
+    rm -f /tmp/quest_bot.lock
     pkill -f quest_bot.py || true
