--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ python-telegram-bot==13.15
 APScheduler==3.6.3
 cachetools==4.2.2
 certifi>=2023.7.22
-tornado>=6.3.3
+tornado==6.1
 pytz==2023.3
 urllib3==1.26.15
 six>=1.10.0
